--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.wrapper {
+.app-wrapper {
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
@@ -8,4 +8,9 @@
   grid-template-areas: 
    'h h'
    'n c';
+}
+
+.app-wrapper-content {
+  grid-area: c;
+  background-color: dimgray;
 }
