--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -1,10 +1,5 @@
 
-.content {
-    grid-area: c;
-    background-color: dimgray;
-  }
-  
-  .content img {
+  div>img {
     height: 400px;
     width: 100%;
   }
