add: NavLink to NavBar

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,9 +2,22 @@
 .navbar {
   grid-area: n;
   background-color: green;
+  padding: 20px;
 
 }
 
-.item {
+.item a{
+  display: block;
+  padding-bottom: 15px;
   color: white;
+  text-decoration: none;
+}
+
+.item:hover {
+  opacity: 0.7;
+  color: chartreuse;
+}
+
+a.active {
+  color: gold;
 }
